=== HEAD

* Deprecate Array#extract_options! and Object#is_one_of? (jeremyevans)

* Deprecate Object#meta_def, #meta_eval, and #metaclass (jeremyevans)

* Deprecate Module#class_def, #class_attr_overridable, #class_attr_reader, #metaalias, #metaattr_reader, and #metaatt_accessor (jeremyevans)

* Speed up the calling of most column accessor methods, and reduce memory overhead of creating them (jeremyevans)

* Deprecate Model#set_restricted using Model#[] if no setter method exists, a symbol is used, and the columns are not set (jeremyevans)

* Deprecate Model#set_with_params and #update_with_params (jeremyevans)

* Deprecate Model#save!, use Model.save(:validate=>false) (jeremyevans)

* Deprecate Model#dataset (jeremyevans)

* Deprecate Model.is and Model.is_a, use Model.plugin for plugins (jeremyevans)

* Deprecate Model.str_columns, Model#str_columns, #set_values, #update_values (jeremyevans)

* Deprecate Model.delete_all, .destroy_all, .size, .uniq, and .import (jeremyevans)

* Copy all current dataset options when calling Model.db= (jeremyevans)

* Deprecate Model.belongs_to, Model.has_many, and Model.has_and_belongs_to_many (jeremyevans)

* Remove SQL::SpecificExpression, have subclasses inherit from SQL::Expression instead (jeremyevans)

* Deprecate SQL::CastMethods#cast_as (jeremyevans)

* Deprecate calling Database#schema without a table argument (jeremyevans)

* Remove cached version of @db_schema in model instances to reduce memory and marshalling overhead (tmm1)

* Deprecate Dataset#quote_column_ref and Dataset#symbol_to_column_ref (jeremyevans)

* Deprecate Dataset#size and Dataset#uniq (jeremyevans)

* Deprecate passing options to Dataset#each, #all, #single_record, #single_value, #sql, #select_sql, #update, #update_sql, #delete, #delete_sql, and #exists (jeremyevans)

* Deprecate Dataset#[Integer] and Dataset#import (jeremyevans)

* Deprecate Dataset#create_view and Dataset#create_or_replace_view (jeremyevans)
