@@ -419,12 +419,12 @@ context "Symbol" do
 end
 
 context "String#to_time" do
-  specify "should convert the string into a Time object" do
+  deprec_specify "should convert the string into a Time object" do
     "2007-07-11".to_time.should == Time.parse("2007-07-11")
     "06:30".to_time.should == Time.parse("06:30")
   end
   
-  specify "should raise Error::InvalidValue for an invalid time" do
+  deprec_specify "should raise Error::InvalidValue for an invalid time" do
     proc {'0000-00-00'.to_time}.should raise_error(Sequel::Error::InvalidValue)
   end
 end
@@ -434,20 +434,20 @@ context "String#to_date" do
     Sequel.convert_two_digit_years = true
   end
 
-  specify "should convert the string into a Date object" do
+  deprec_specify "should convert the string into a Date object" do
     "2007-07-11".to_date.should == Date.parse("2007-07-11")
   end
   
-  specify "should convert 2 digit years by default" do
+  deprec_specify "should convert 2 digit years by default" do
     "July 11, 07".to_date.should == Date.parse("2007-07-11")
   end
 
-  specify "should not convert 2 digit years if set not to" do
+  deprec_specify "should not convert 2 digit years if set not to" do
     Sequel.convert_two_digit_years = false
     "July 11, 07".to_date.should == Date.parse("0007-07-11")
   end
 
-  specify "should raise Error::InvalidValue for an invalid date" do
+  deprec_specify "should raise Error::InvalidValue for an invalid date" do
     proc {'0000-00-00'.to_date}.should raise_error(Sequel::Error::InvalidValue)
   end
 end
@@ -457,20 +457,20 @@ context "String#to_datetime" do
     Sequel.convert_two_digit_years = true
   end
 
-  specify "should convert the string into a DateTime object" do
+  deprec_specify "should convert the string into a DateTime object" do
     "2007-07-11 10:11:12a".to_datetime.should == DateTime.parse("2007-07-11 10:11:12a")
   end
   
-  specify "should convert 2 digit years by default" do
+  deprec_specify "should convert 2 digit years by default" do
     "July 11, 07 10:11:12a".to_datetime.should == DateTime.parse("2007-07-11 10:11:12a")
   end
 
-  specify "should not convert 2 digit years if set not to" do
+  deprec_specify "should not convert 2 digit years if set not to" do
     Sequel.convert_two_digit_years = false
     "July 11, 07 10:11:12a".to_datetime.should == DateTime.parse("0007-07-11 10:11:12a")
   end
 
-  specify "should raise Error::InvalidValue for an invalid date" do
+  deprec_specify "should raise Error::InvalidValue for an invalid date" do
     proc {'0000-00-00'.to_datetime}.should raise_error(Sequel::Error::InvalidValue)
   end
 end
@@ -481,29 +481,29 @@ context "String#to_sequel_time" do
     Sequel.convert_two_digit_years = true
   end
 
-  specify "should convert the string into a Time object by default" do
+  deprec_specify "should convert the string into a Time object by default" do
     "2007-07-11 10:11:12a".to_sequel_time.class.should == Time
     "2007-07-11 10:11:12a".to_sequel_time.should == Time.parse("2007-07-11 10:11:12a")
   end
   
-  specify "should convert the string into a DateTime object if that is set" do
+  deprec_specify "should convert the string into a DateTime object if that is set" do
     Sequel.datetime_class = DateTime
     "2007-07-11 10:11:12a".to_sequel_time.class.should == DateTime
     "2007-07-11 10:11:12a".to_sequel_time.should == DateTime.parse("2007-07-11 10:11:12a")
   end
   
-  specify "should convert 2 digit years by default if using DateTime class" do
+  deprec_specify "should convert 2 digit years by default if using DateTime class" do
     Sequel.datetime_class = DateTime
     "July 11, 07 10:11:12a".to_sequel_time.should == DateTime.parse("2007-07-11 10:11:12a")
   end
 
-  specify "should not convert 2 digit years if set not to when using DateTime class" do
+  deprec_specify "should not convert 2 digit years if set not to when using DateTime class" do
     Sequel.datetime_class = DateTime
     Sequel.convert_two_digit_years = false
     "July 11, 07 10:11:12a".to_sequel_time.should == DateTime.parse("0007-07-11 10:11:12a")
   end
 
-  specify "should raise Error::InvalidValue for an invalid time" do
+  deprec_specify "should raise Error::InvalidValue for an invalid time" do
     proc {'0000-00-00'.to_sequel_time}.should raise_error(Sequel::Error::InvalidValue)
     Sequel.datetime_class = DateTime
     proc {'0000-00-00'.to_sequel_time}.should raise_error(Sequel::Error::InvalidValue)
